--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 		<div class="container">
 			<div class="section-title">
 			  <h2>Popular Courses</h2>
-			  <p>Choose Our <span><u>Top Courses</u></span></p>
+			  <p>Choose your <span><u> Desired Internship </u></span></p>
 			</div>				
 			<div class="row">					
 				<div class="col-lg-4 col-sm-6 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
